😎 CHAT VISIBILITY IS FIXED (#1267)
* Maybe fixes visibility?

* More Elegant

* Forgot to re-add this -_-

--- a/src/scss/game.scss
+++ b/src/scss/game.scss
@@ -42,7 +42,7 @@
 			flex-grow: 1;
 			display: flex;
 			flex-direction: column;
-
+			height: 100%;
 			-webkit-touch-callout: none;
 			-webkit-user-select: none;
 			-khtml-user-select: none;
